syntax = "proto3";

package options;

option go_package = "xgo/tests/pb/pboptions";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "tests/proto/module/external.proto";

import "proto/json.proto";

// For test cases ignore field.
message IgnoreOptional1 {
  optional int32 f_int32 = 1 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional int64 f_int64 = 2 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional uint32 f_uint32 = 3 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional uint64 f_uint64 = 4 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional sint32 f_sint32 = 5 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional sint64 f_sint64 = 6 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional sfixed32 f_sfixed32 = 7 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional sfixed64 f_sfixed64 = 8 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional fixed32 f_fixed32 = 9 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional fixed64 f_fixed64 = 10 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional float f_float = 11 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional double f_double = 12 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional bool f_bool1 = 21 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional string f_string1 = 22 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional bytes f_bytes1  = 23 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional external.EnumNum1 f_enum1 = 31 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional external.Message1 f_message1 = 32 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional google.protobuf.Any f_any1 = 41 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional google.protobuf.Duration f_duration1 = 42 [ (json.field) = { json: "t_ignore1"; ignore: true } ];

  optional google.protobuf.Timestamp f_timestamp1 = 43 [ (json.field) = { json: "t_ignore1"; ignore: true } ];
}
